# gen-better-release-rader-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
